# raytracer

./: Cargo.toml  README.md  cornell_box.mtl  cornell_box_plane.mtl  thing.mtl
src/: camera.rs  main.rs  material.rs  math.rs  shape.rs
