[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
softbuffer = "0.1.0"
threadpool = "1.8.1"
glam = "0.8.5"
num_cpus = "1.13.1"
rand = "0.8.4"
tobj = "3.2.2"
